fix: remove hidden overflow from accordion

--- a/src/assets/styles/components/_accordion.scss
+++ b/src/assets/styles/components/_accordion.scss
@@ -32,7 +32,6 @@
 
     opacity: 0;
     height: 0;
-    overflow: hidden;
     transition: ease 0.3s;
   }
 
